2008-11-14  Michael Wiegand <michael.wiegand@intevation.de>

	Applying patch provided by Stjepan Gros to eliminate compiler warnings.

	* openvasd/oval_plugins.c (oval_plugin_add, ovaldi_launch): Minor
	reformattings, changes to eliminate compiler warnings.

	* openvasd/otp_1_0.c (otp_1_0_server_send_certificates): Casting to
	eliminate compiler warning.

2008-11-14  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/oval_plugins.c (ovaldi_launch): Re-added G_SPAWN_SEARCH_PATH
	flag to g_spawn_sync call since it was lost in rev 1703.

2008-11-13  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/otp_1_0.c (otp_1_0_server_send_certificates) : closed mem 
	leak.

2008-11-12  Michael Wiegand <michael.wiegand@intevation.de>

	Applying patch provided by Stjepan Gros to improve 64-bit cleanliness.

	* openvasd/nasl_plugins.c, openvasd/ntp_11.c, openvasd/attack.c,
	openvasd/save_kb.c, openvasd/openvasd.c, openvasd/nes_plugins.c,
	openvasd/pluginload.c, openvasd/save_tests.c, openvasd/comm.c,
	openvasd/pluginscheduler.c: 32/64-bit cleanups, introduced glib.

2008-11-12  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Work on Change Request #17 (http://www.openvas.org/openvas-cr-17.html -
	"OTP: Make NVT signatures available to OpenVAS-Client").
	Certificate information sending functionality improved. Sends real 
	information, not dummystrings.

	ATTENTION: needs openvas-libnasl rev. 1702 to compile smoothly.

	* configure.in : Macros for gpgme public key support added.

	* include/config.h.in : undef _FILE_OFFSET_BITS for AC_SYS_LARGEFILE

	* configure : regenerated.

	* openvasd/otp_1_0.h : proto added.

	* openvasd/otp_1_0.c (otp_1_0_server_send_certificates) : nasl, glib 
	includes. Does send real information, not dummystrings.

	* openvasd/ntp_11.c : removed interpretation of a void return.

	* openvasd/oval_plugins.c : Includes ordered and missing ones added.

	* ChangeLog : shamefully changed typos with my own email adress.
